--- a/kontak.html
+++ b/kontak.html
@@ -182,7 +182,15 @@
         <h2>Peta Lokasi</h2>
         <p>Anda dapat menemukan lokasi kantor kami melalui peta di bawah ini:</p>
         <div class="map-placeholder">
-             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d777.1607009096421!2d114.45059859094087!3d-2.601724555924549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sid!2sid!4v1763901520404!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             <iframe 
+                 src="https://maps.google.com/maps?q=-2.601379,114.450435&amp;z=15&amp;output=embed"
+                 width="100%" 
+                 height="450" 
+                 style="border:0;" 
+                 allowfullscreen="" 
+                 loading="lazy" 
+                 referrerpolicy="no-referrer-when-downgrade">
+             </iframe>
         </div>
 
         <div class="form-section">
