--- a/galeri-baksos.html
+++ b/galeri-baksos.html
@@ -106,6 +106,11 @@
     font-size: 0.8rem;
 }
 
+/* --- FOOTER KOREKSI SPASI KONTAK --- */
+        .footer-section p {
+            margin-bottom: 5px; /* Mengganti margin 15px global menjadi 5px untuk kontak */
+        }
+
 @media (max-width: 768px) {
     .footer-content {
         flex-direction: column;
@@ -179,10 +184,10 @@
     <div class="footer-content">
         <div class="footer-section">
             <h4>Hubungi Kami</h4>
-            <p style="margin-top: 10px;"><strong>Alamat:</strong> Jl. Utama Desa, Lamunti Permai, Kapuas.</p>
-            <p style="margin-top: 10px;"><strong>Telp:</strong> (0513) 7xxxxxx</p>
-            <p style="margin-top: 10px;"><strong>Email:</strong> koperasimerahputih@desa.id</p>
-            <p style="margin-top: 10px;"><strong>Jam Operasional:</strong> Senin-Jumat (08:00 - 15:00)</p>
+            <p><strong>Alamat:</strong> Jl. Utama Desa, Lamunti Permai, Kapuas.</p>
+            <p><strong>Telp:</strong> (0513) 7xxxxxx</p>
+            <p><strong>Email:</strong> koperasimerahputih@desa.id</p>
+            <p><strong>Jam Operasional:</strong> Senin-Jumat (08:00 - 15:00)</p>
         </div>
         
         <div class="footer-section">
