--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
         .footer-section a:hover { color: #2E7D32; }
         .footer-bottom { text-align: center; padding-top: 20px; border-top: 1px solid #4a6d8c; margin-top: 20px; font-size: 0.8rem; }
         
+        /* --- FOOTER KOREKSI SPASI KONTAK --- */
+        .footer-section p {
+            margin-bottom: 5px; /* Mengganti margin 15px global menjadi 5px untuk kontak */
+        }
+
         @media (max-width: 768px) {
             .hero h1 { font-size: 2rem; }
             .navbar { flex-direction: column; gap: 10px; }
@@ -122,7 +127,7 @@
             Koperasi Desa Merah Putih <span>Lamunti Permai</span>
         </div>
         <div class="menu">
-            <a href="#">Beranda</a>
+            <a href="#" style="color: #D32F2F;">Beranda</a>
             <a href="data-anggota.html">Data Anggota</a>
             <a href="unit-usaha.html">Unit Usaha</a>
             <a href="tentang-kami.html">Tentang Kami</a>
