--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
     <section id="announcement-section" class="announcement-section">
         <div class="announcement-box">
             <h3>📢 Laporan Keuangan Bulanan Koperasi Telah Tersedia</h3>
-            <p>Kami menjamin transparansi penuh. Silakan buka halaman pengantar Laporan Realisasi Keuangan bulan **Juni 2025** di bawah ini.</p>
-            <a href="keuangan.html" class="btn-download" target="_blank">Buka Halaman Laporan (Juni 2025)</a>
+            <p>Kami menjamin transparansi penuh. Silakan buka halaman pengantar Laporan Realisasi Keuangan di bawah ini.</p>
+            <a href="keuangan.html" class="btn-download" target="_blank">Buka Halaman Laporan Keuangan</a>
             <p class="note">*Link unduhan file laporan utama (yang dilindungi kata sandi) terdapat di dalam halaman pengantar tersebut.</p>
         </div>
     </section>
